[package]
name = "test-db-migration-app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.26", features = ["std", "derive", "help", "usage", "env"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "any"
]